@startuml
enum Weapon {
+  DAGGER
+  SWORD
+  AXE
+  WARHAMMER
+  BOW
+ String toString()
}
class Hero {
- Profession profession
- String name
- HairType hairType
- HairColor hairColor
- Armor armor
- Weapon weapon
}
class Hero.Builder {
- Profession profession
- String name
- HairType hairType
- HairColor hairColor
- Armor armor
- Weapon weapon
+ Builder withHairType(HairType)
+ Builder withHairColor(HairColor)
+ Builder withArmor(Armor)
+ Builder withWeapon(Weapon)
+ Hero build()
}
enum Profession {
+  WARRIOR
+  THIEF
+  MAGE
+  PRIEST
+ String toString()
}
enum HairColor {
+  WHITE
+  BLOND
+  RED
+  BROWN
+  BLACK
+ String toString()
}
enum Armor {
+  CLOTHES
+  LEATHER
+  CHAIN_MAIL
+  PLATE_MAIL
- String title
+ String toString()
}
enum HairType {
+  BALD
+  SHORT
+  CURLY
+  LONG_STRAIGHT
+  LONG_CURLY
- String title
+ String toString()
}


Hero -->  "-profession" Profession
Builder ..+ Hero
Hero -->  "-armor" Armor
Builder -->  "-hairColor" HairColor
Builder -->  "-weapon" Weapon
Builder -->  "-hairType" HairType
Hero -->  "-hairColor" HairColor
Builder -->  "-profession" Profession
Hero -->  "-weapon" Weapon
Hero -->  "-hairType" HairType
Builder -->  "-armor" Armor
@enduml